discussion/kv_engine/155349/155349_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add PCH Object Library

Add an object library containing a pre-compiled header that includes
headers commonly used throughout the codebase. This commit is a
proof of concept that use pre-compiled headers in various targets
throughout the code base.

Before:

Analyzing build trace from 'noOptimize.bin'...
**** Time summary:
Compilation (1065 times):
  Parsing (frontend):         3093.3 s
  Codegen & opts (backend):    832.9 s

After:

  Analyzing build trace from 'initial.bin'...
**** Time summary:
Compilation (1073 times):
  Parsing (frontend):         2847.3 s
  Codegen & opts (backend):    826.4 s

Change-Id: I182fa5d0058849e02ff8d473e8477aa51d5d999f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-10 14:27:23.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 15:06:51.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11723/ : FAILURE

ThreadSanitizer issue: lock-order-inversion (potential deadlock) (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x50dfa) in __interceptor_pthread_mutex_lock  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11723/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8323/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36691/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/260/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31361/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11451/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 15:34:29.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11740/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8323/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36691/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/260/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31361/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11451/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 19:20:43.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9728/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8323/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36691/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/260/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31361/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10375/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11451/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11744/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 05:48:34.000000000
Message: 
Patch Set 10:

Overriding clang-tidy which can't cope with changes to precompiled-header.h
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 05:49:46.000000000
Message: 
Patch Set 10: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 05:49:52.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 06:43:11.000000000
Message: 
Patch Set 10: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
